--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,27 +1,38 @@
-.caixa {
-    color: white;
-    display: inline-block;
-    line-height: 50px;
-    text-align: center;
-    vertical-align: top;
-  }
-  
-  .width-and-height {
-    height: 50px;
-    width: 50px;
-  }
-  
-  /* insira na classe abaixo um padding de 20px para aplicá-lo aos itens B, C e D */
-  .padding {
-    padding: 20px;
-  }
-  
-  /* insira na classe abaixo uma margem de 30px para aplicá-la aos itens C e D */
-  .margin {
-    margin: 30px;
-  }
-  
-  /* insira na classe abaixo uma borda com valor '5px solid black' para aplicá-la ao item D */
-  .border {
-    border: 5px;
-  }
+.super-mario {
+  width: 200px;
+  position: absolute;
+  left: 100px;
+  top: 100px;
+  z-index: 1;
+}
+
+.goomba {
+  width: 100px;
+  position: absolute;
+  left: 150px;
+  top: 400px;
+  z-index: 2;
+}
+
+.baloon {
+  position: absolute;
+  left: 420px;
+  top: 120px;
+  z-index: 3;
+}
+
+.speach {
+  font-size: 25px;
+  position: absolute;
+  left: 440px;
+  top: 150px;
+  z-index: 4;
+
+}
+
+.bowser {
+  width: 200px;
+  position: absolute;
+  left: 700px;
+  top: 300px;
+}
