--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/style.css
@@ -1,38 +1,11 @@
-.super-mario {
-  width: 200px;
-  position: absolute;
-  left: 100px;
-  top: 100px;
-  z-index: 1;
+h1, p {
+  text-align: center;
 }
 
-.goomba {
-  width: 100px;
-  position: absolute;
-  left: 150px;
-  top: 400px;
-  z-index: 2;
+ol:hover {
+  background-color: gray;
 }
 
-.baloon {
-  position: absolute;
-  left: 420px;
-  top: 120px;
-  z-index: 3;
-}
-
-.speach {
-  font-size: 25px;
-  position: absolute;
-  left: 440px;
-  top: 150px;
-  z-index: 4;
-
-}
-
-.bowser {
-  width: 200px;
-  position: absolute;
-  left: 700px;
-  top: 300px;
+ol:active {
+  font-family: monospace;
 }
